k8s/service-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '3002'
        prometheus.io/path: '/metrics'
    spec:
      containers:
        - name: service-c
          image: service-c:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3002
      targetPort: 3002
  selector:
    app: service-c
