k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /submit
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 3000
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 3000
